[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Enemies/DamageBoostPickup/Pickup.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/DamageBoostPickup/DamageBoostPickup.gd" type="Script" id=2]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://Entities/Enemies/DamageBoostPickup/Pickup.wav" type="AudioStream" id=4]
[ext_resource path="res://RadialGradient.png" type="Texture" id=5]
[ext_resource path="res://Items/Weapons/Bullet/bulletParticles.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.645646, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -13.32, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
damping_random = 1.0
angle = 360.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color = Color( 1, 0, 0, 1 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CircleShape2D" id=7]
radius = 2.23607

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="DamageBoostPickup" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
incdec = 0.4

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
texture_scale = 0.05
color = Color( 1, 0, 0, 1 )

[node name="Explosion" type="Particles2D" parent="."]
modulate = Color( 68.21, 0, 0, 1 )
material = SubResource( 6 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="PickUpSFX" type="Node2D" parent="."]
script = ExtResource( 3 )
audio = ExtResource( 4 )
bus = "SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="DamageBoostTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="timeout" from="DamageBoostTimer" to="." method="_on_damage_boost_timeout"]
